--- a/docs/src/_data/dev_docs/panel_variables.yml
+++ b/docs/src/_data/dev_docs/panel_variables.yml
@@ -18,26 +18,26 @@
 
 - name: target
   id: panel-variable-target
-  types: PreviewExampleEntity, PreviewGroupEntity
+  types: ScenarioEntity, ScenarioGroupEntity
   description: |
-    An object representing the example or group of examples currently being rendered
+    An object representing the example or group of scenarios currently being rendered
   example: |
     <h2>Currently rendering '<%= target.label %>' which is <%= "not" unless target.type == :group %> a group.</h2>
 
-- name: examples
-  id: panel-variable-examples
-  types: Array<RenderedPreviewExampleEntity>
+- name: scenarios
+  id: panel-variable-scenarios
+  types: Array<RenderedScenarioEntity>
   example: |
-    <p>This preview is showing <%= examples.size %> examples rendered together.</p>
-    <p>Here is the source code for each example:</p>
-    <% examples.each do |example| %>
+    <p>This preview is showing <%= scenarios.size %> scenarios rendered together.</p>
+    <p>Here is the source code for each :</p>
+    <% scenarios.each do || %>
       <div>
-        <%= example.source %>
+        <%= .source %>
       <div>
     <% end %>
   description: |
-    An array of rendered example objects representing the individual
-    examples in the current preview. For **non-grouped** (i.e. regular) **previews**,
+    An array of rendered scenario objects representing the individual
+    scenarios in the current preview. For **non-grouped** (i.e. regular) **previews**,
     this array will always **only have one item**.
 
 - name: context
