--- a/docs/src/_data/dev_docs/nav.yml
+++ b/docs/src/_data/dev_docs/nav.yml
@@ -1,7 +1,8 @@
 groups:
   - label: Get Started
     items:
-      - extending
+      - overview
+      - concepts
       - contributing
 
   - label: Inspector Panels
