docs: more docs rebuild

--- a/docs/src/_data/dev_docs/nav.yml
+++ b/docs/src/_data/dev_docs/nav.yml
@@ -1,9 +1,8 @@
 groups:
   - label: Get Started
     items:
-      - overview
+      - introduction
       - concepts
-      - contributing
 
   - label: Inspector Panels
     items:
@@ -27,3 +26,7 @@ groups:
     items:
       - hooks
       - data
+
+  - label: Lookbook Development
+    items:
+      - contributing
