--- a/docs/src/_data/dev_docs/nav.yml
+++ b/docs/src/_data/dev_docs/nav.yml
@@ -27,6 +27,6 @@ groups:
       - hooks
       - data
 
-  - label: Lookbook Development
-    items:
-      - contributing
+  # - label: Lookbook Development
+  #   items:
+  #     - contributing
