docs: preview and pages docs

--- a/docs/src/_data/user_docs/nav.yml
+++ b/docs/src/_data/user_docs/nav.yml
@@ -4,7 +4,7 @@ groups:
       - introduction
       - installation
       - key-concepts
-      - lookbook-ui
+      # - lookbook-ui
       - configuration
       - upgrading
 
