refactor(embeds): include iframe resizer in lookbook js, add core version

--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
       "source": "./app/assets/lookbook/js/lookbook.js",
       "distDir": "./public/lookbook-assets",
       "outputFormat": "global",
-      "context": "browser"
+      "context": "browser",
+      "sourceMap": false
+    },
+    "embed-core": {
+      "source": "./app/assets/lookbook/js/lookbook-core.js",
+      "distDir": "./public/lookbook-assets",
+      "outputFormat": "global",
+      "context": "browser",
+      "sourceMap": false
     }
   },
   "alias": {
