--- a/config/app.yml
+++ b/config/app.yml
@@ -30,7 +30,8 @@ shared:
   preview_template: lookbook/previews/preview
   preview_inspector:
     panels: [source, notes, params, "*"]
-  preview_embed:
+  preview_embeds:
+    policy: "SAMEORIGIN"
     panels: false
     actions: [inspect, open]
     display_option_controls: true
