docs: more docs rebuild

--- a/docs/src/_data/user_docs/nav.yml
+++ b/docs/src/_data/user_docs/nav.yml
@@ -41,7 +41,7 @@ groups:
     items:
       - ui-theming
       - ui-inspector
-      - ui-config
+      # - ui-config
 
   - label: Other
     items:
