--- a/docs/src/_data/links.yml
+++ b/docs/src/_data/links.yml
@@ -7,5 +7,6 @@ v1:
 v2:
   repo: https://github.com/ViewComponent/lookbook/tree/v2
   docs: https://v2.lookbook.build/lookbook
-  demo: https://v2-demo.lookbook.build/lookbook
+  demo: http://localhost:3000/lookbook
+  demo_home: "http://localhost:3000"
   demo_repo: https://github.com/ViewComponent/lookbook-demo/tree/v2
