--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.7, 3.0, 3.1]
+        ruby: [2.7, 3.0, 3.1, 3.2]
         appraisal: ["rails-6.0", "rails-6.1", "rails-7.0"]
     steps:
       - uses: actions/checkout@v2
