--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lookbook-docs",
-  "version": "1.4.4",
+  "version": "2.0.0.beta.0",
   "private": true,
   "scripts": {
     "esbuild": "node esbuild.config.js --minify",
