--- a/docs/src/_data/api/helpers/ui_elements_helper.yml
+++ b/docs/src/_data/api/helpers/ui_elements_helper.yml
@@ -7,109 +7,109 @@ description: |-
   These are available for use in documentation page templates
   and custom preview inspector panel templates.
 methods:
-- id: icon-instance-method
-  name: icon
-  path: Lookbook::UiElementsHelper#icon
-  signature: icon(name, **opts)
-  signature_call: icon
-  signature_args: name, **opts
-  description: |-
-    Render an icon.
+  - id: icon-instance-method
+    name: icon
+    path: Lookbook::UiElementsHelper#icon
+    signature: icon(name, **opts)
+    signature_call: icon
+    signature_args: name, **opts
+    description: |-
+      Render an icon.
 
-    Lookbook uses icons from the [Lucide Icons](https://lucide.dev/) set and
-    a full list of available icon names can be found on that site.
-  return_types:
-  scope: instance
-  tags:
-  - name:
-    tag_name: api
-    text: public
-    types:
-  - name: ''
-    tag_name: example
-    text: |-
-      <%= icon :trash %>
-      <%= icon :camera, size: 6, style: "color: red;" %>
-    types:
-  - name: name
-    tag_name: param
-    text: Name of the icon
-    types: Symbol, String
-  - name: opts
-    tag_name: param
-    text: Options hash
-    types: Hash
-  klass: UiElementsHelper
-  group:
-- id: code-instance-method
-  name: code
-  path: Lookbook::UiElementsHelper#code
-  signature: code(language = :html, **opts, &amp;block)
-  signature_call: code
-  signature_args: language = :html, **opts, &amp;block
-  description: |-
-    Display a syntax-highlighted block of code.
+      Lookbook uses icons from the [Lucide Icons](https://lucide.dev/) set and
+      a full list of available icon names can be found on that site.
+    return_types:
+    scope: instance
+    tags:
+      - name:
+        tag_name: api
+        text: public
+        types:
+      - name: ""
+        tag_name: example
+        text: |-
+          <%= icon :trash %>
+          <%= icon :camera, size: 6, style: "color: red;" %>
+        types:
+      - name: name
+        tag_name: param
+        text: Name of the icon
+        types: Symbol, String
+      - name: opts
+        tag_name: param
+        text: Options hash
+        types: Hash
+    klass: UiElementsHelper
+    group:
+  - id: code-instance-method
+    name: code
+    path: Lookbook::UiElementsHelper#code
+    signature: code(language = :html, **opts, &amp;block)
+    signature_call: code
+    signature_args: language = :html, **opts, &amp;block
+    description: |-
+      Display a syntax-highlighted block of code.
 
-    An alternative to using markdown code blocks for templates that have
-    markdown parsing disabled, or for when more control is required.
-  return_types:
-  scope: instance
-  tags:
-  - name:
-    tag_name: api
-    text: public
-    types:
-  - name: language
-    tag_name: param
-    text: Which language the code is written in
-    types: Symbol
-  - name: opts
-    tag_name: param
-    text: Options hash
-    types: Hash
-  - name: block
-    tag_name: param
-    text: Code block
-    types: Proc
-  klass: UiElementsHelper
-  group:
-- id: embed-instance-method
-  name: embed
-  path: Lookbook::UiElementsHelper#embed
-  signature: embed(preview, scenario = nil, **opts)
-  signature_call: embed
-  signature_args: preview, scenario = nil, **opts
-  description: |-
-    Render a 'live' embed of a component preview.
+      An alternative to using markdown code blocks for templates that have
+      markdown parsing disabled, or for when more control is required.
+    return_types:
+    scope: instance
+    tags:
+      - name:
+        tag_name: api
+        text: public
+        types:
+      - name: language
+        tag_name: param
+        text: Which language the code is written in
+        types: Symbol
+      - name: opts
+        tag_name: param
+        text: Options hash
+        types: Hash
+      - name: block
+        tag_name: param
+        text: Code block
+        types: Proc
+    klass: UiElementsHelper
+    group:
+  - id: embed-instance-method
+    name: embed
+    path: Lookbook::UiElementsHelper#embed
+    signature: embed(preview, scenario = nil, **opts)
+    signature_call: embed
+    signature_args: preview, scenario = nil, **opts
+    description: |-
+      Render a 'live' embed of a component preview.
 
-    If no scenario name is provided then the default (first) preview
-    scenario will be rendered in the embed.
-  return_types:
-  scope: instance
-  tags:
-  - name:
-    tag_name: api
-    text: public
-    types:
-  - name: preview
-    tag_name: param
-    text: Name of the preview class to embed
-    types: String
-  - name: scenario
-    tag_name: param
-    text: Example method name
-    types: String
-  - name: opts
-    tag_name: param
-    text: Options hash
-    types: Hash
-  klass: UiElementsHelper
-  group:
+      If no scenario name is provided then the default (first) preview
+      scenario will be rendered in the embed.
+    return_types:
+    scope: instance
+    tags:
+      - name:
+        tag_name: api
+        text: public
+        types:
+      - name: preview
+        tag_name: param
+        text: Name of the preview class to embed
+        types: String
+      - name: scenario
+        tag_name: param
+        text: Example method name
+        types: String
+      - name: opts
+        tag_name: param
+        text: Options hash
+        types: Hash
+    klass: UiElementsHelper
+    group:
 groups: []
 type: module
 category: helper
 tags:
-- name:
-  tag_name: api
-  text: public
-  types:
+  - name:
+    tag_name: api
+    text: public
+    types:
