allow preview embeds to be disabled

--- a/config/app.yml
+++ b/config/app.yml
@@ -9,6 +9,7 @@ shared:
     main_panels: [preview, output]
     drawer_panels: [source, notes, params, "*"]
   preview_embeds:
+    enabled: true
     policy: "SAMEORIGIN"
     panels: false
     actions: []
