--- a/docs/src/_data/config_options.yml
+++ b/docs/src/_data/config_options.yml
@@ -34,6 +34,12 @@ previews:
     example: config.lookbook.preview_inspector.drawer_panels = [:notes, :params]
     description: List of panels to display in the preview inspector
 
+  - name: preview_embeds.enabled
+    types: Boolean
+    default: "true"
+    example: config.lookbook.preview_embeds.enabled = false
+    description: Whether or not preview embeds are enabled.
+
   - name: preview_embeds.policy
     types: String
     default: SAMEORIGIN
