refactor(embeds): preview embed settings tidy up

--- a/config/app.yml
+++ b/config/app.yml
@@ -10,7 +10,7 @@ shared:
     drawer_panels: [source, notes, params, "*"]
   preview_embeds:
     enabled: true
-    policy: "SAMEORIGIN"
+    policy: SAMEORIGIN
     panels: false
     actions: []
     scenarios: []
